--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -1,8 +1,27 @@
 name: hello-world
 on: push
 jobs:
-  my-job:
+  cont-integration:
     runs-on: ubuntu-latest #github-runner
     steps:
-      - name: my-step
-        run: echo "Hello World Yuvraj!"
+      - name: pipeline init
+        run: echo "Pipeline Unit"
+        
+      - name: secrets scanning
+        run: echo "secrets scanning using gitleaks"
+        
+      - name: IaC Scanning
+        run: echo "IaC Scanning using Checkov"
+        
+  cont-deployment:
+    runs-on: ubuntu-latest #github-runner
+    steps:
+      - name: Deploy Staging
+        run: echo "Deploy Staging in EKS"
+        
+      - name: Infra Scanning
+        run: echo "Infra Scanning using OpenVAS"
+        
+      - name: Deploy Staging
+        run: echo "Deploy Prod in EKS"
+        
