--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -4,8 +4,14 @@ jobs:
   cont-integration:
     runs-on: ubuntu-latest #github-runner
     steps:
-      - name: pipeline init
-        run: echo "Pipeline Unit"
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          
+      - name: secrets scanning
+        uses: gitleaks/gitleaks-action@v2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
       - name: secrets scanning
         run: echo "secrets scanning using gitleaks"
